* BooleanMask2D: minor fix in getContourPointsxxx(..) methods * ROI2DShape:  - minor fix on computeBounds2D()  - minor fix on getBooleanMask(..) * Sequence: added imageProvider field * LoaderDialog:  - better handling of Sequence loading from multiple files  - better preview display * Loader:  - added new 'load(...)' methods for partial load and display of Sequence from a group of file.  - added new 'loadSequence(..)' method for partial Sequence load from a group of file.  - added 'internalLoadGroup(..)' methods for partial Sequence load from a file group  - Sequence now keep reference of used importer for loading (will be used later for caching), importer is closed when Sequence is unloaded from memory. * SequenceFileGroupImporter:  - added closeInternalsImporters() method  - minor fix on getImage(..) (sizeX and sizeY could be wrong)  - minor fix on getThumbnail(..) * fixed issue Java 10 on OSX. * VtkUtil:  - added getPolyDataFromPoints(..) method  - added polyDataToImageData(..) method  - added transformPolyData(..) method  - added objToMesh(..) method  - added objToImageData(..) method * added GeomUtil class (utilities for 'Geom' classes) * added caching preferences (not yet used) * output log can now be saved in file * PluginDetail: can now show plugin location and online help by double clicking on links. * added PluginDescriptor.getPluginJarPath() method * minor change on memory information display